Fix compiler warning in Blink.

Fix "no matching push" compiler warning in Blink.

BUG=771752

Change-Id: I7a4b49c99c2f74cf18c03c025994284730ce9536
Reviewed-on: https://chromium-review.googlesource.com/702275
Commit-Queue: Becca Hughes <beccahughes@chromium.org>
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Cr-Commit-Position: refs/heads/master@{#506701}
Former-commit-id: 8170e999fd677b429c2b75f7a212e3087ee81a9e